[MOBYLET-80] FindBugs対応
git-svn-id: https://www.seasar.org/svn/mobylet/trunk@644 a8c47a47-7b07-41c4-b2c4-fbfeade54c8c